Actions
Bug #4008
closedlibdladm should not have a curses UI inside
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
2013-08-07
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
libdladm is poorly designed bringing far too much baggage into the mix (namely libcurses). Junk should be separated out into separate libraries so as not to burden those that need simple APIs from libdladm.
Updated by Yuri Pankov over 9 years ago
I wonder if we could simply remove the functionality, used in dladm and flowstat to show continuosly updated stats and not documented anywhere. dlstat and flowstat are able to display the statistics continuously, just not in such fancy way.
Updated by Rich Lowe over 9 years ago
Secondarily, I'd expect libcurses being lazy-loaded to save you from all this pain, but yet it isn't, because a reference to 'stdscr' causes it to be loaded, even with subcommands that won't use it. That's a bit annoying too.
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 62ef8476c4f1cb016de161827d921418dee4b031
commit 62ef8476c4f1cb016de161827d921418dee4b031 Author: Yuri Pankov <yuri.pankov@nexenta.com> Date: 2015-12-04T23:12:46.000Z 4008 libdladm should not have a curses UI inside Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Reviewed by: Dan McDonald <danmcd@omniti.com> Approved by: Hans Rosenfeld <hans.rosenfeld@nexenta.com>
Actions