4008 libdladm should not have a curses UI inside Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Reviewed by: Dan McDonald <danmcd@omniti.com> Approved by: Hans Rosenfeld <hans.rosenfeld@nexenta.com>